* restore 1.4.2 compatability * up version to 0.2.1
git-svn-id: https://svn.internet2.edu/svn/i2mi/trunk@2847 bc24b658-cf39-4249-b827-e3526eaaeb42